[package]
name = "raft-storage"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft          = { git = "https://github.com/tikv/raft-rs", default-features = false, features = ["prost-codec"] }
sled          = "0.32"
bytes         = "^0.5"
prost         = "^0.6"
slog          = "^2.5"
